--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Twitter copy</title>
 </head>
 <body>
-    <div id="img"></div>
-    <img id="lb" src="img/Logo_Twitter_branco.png" alt="">
-    <img id="la" src="img/twitter-logo-blue.png" alt="">
+    <img id="background" src="img/bckgr.png" alt="">
+    <img id="white-logo" src="img/Logo_Twitter_branco.png" alt="">
+    <img id="blue-logo" src="img/twitter-logo-blue.png" alt="">
     <main>
-        <h1>Acontecendo agora</h1>
-        <h2>Inscreva-se no Twitter hoje mesmo</h2>
-        <div id="txt">
-            <span id="apple">Inscrever-se com Apple</span>
-            <p>ou</p>
-            <span id="cel">Inscreverse com número de celular ...</span>
-            <p>Já tem uma conta</p>
-            <span>Entrar</span>
+        <h1>Acontecendo agora</h1><br><br>
+        <h2>Inscreva-se no Twitter hoje mesmo.</h2><br><br>
+        <div id="sla">
+            <a href="#" id="sub-apple"><img id="apple-icon" src="img/apple.png" alt=""> Inscrever-se com Apple</a><br><br>
+            <p>ou</p><br>
+            <a href="#" id="create-account">Criar conta</a>
+            <footer>
+                <h3>Já tem uma conta?</h3><br>
+                <a href="#" id="enter">Entrar</a>
+            </footer>
         </div>
     </main>
 </body>
